--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,7 @@
 @import 'bootstrap/dist/css/bootstrap';
 
 .navbar {
-    background-color: #FDF6EA !important;
+    background-color: #black !important;
  }
  .navbar-brand {
     font-size: 3rem;
@@ -9,3 +9,33 @@
   h1 {
     color: green;
  }
+ .nav-link {
+     color: #white !important;
+ }
+ #logo {
+     float: left;
+     font-size: 1.8em;
+     color: #white;
+     text-transform: uppercase;
+     letter-spacing: -1px;
+     font-weight: bold;
+    }
+     #home-container{
+      margin-top: 25px;
+    }
+      html,
+      body {
+         height: 100%;
+    }
+
+     #page-content {
+        flex: 1 0 auto;
+        backgroud-color: #whitegrey;
+    }
+
+/* Other Classes for Page Styling */
+
+    
+     #sticky footer {
+         flex-shrink: none;
+     }
