--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,23 +1,34 @@
+<div class="container">
 <% if @article.errors.any? %>
 <h2> The following error prevent article form to being saved </h2>
  <ul>
-
+<div class="row justify-content-center">
+    <div class="col-10">
    <% @article.errors.full_messages.each do |msg| %>
      <li><%= msg %></li>
    <% end %>
  </ul>
 <% end %>
-<%= form_with(model: @article, local: true)  do |f| %>
+    <div class="row justify-content-center">
+        <div class="col-10">
+            <%= form_with(model: @article, class:"shadow p-3 mb-3 bg-info rounded", local: true)  do |f| %>
 
-<p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-</p>
-<p>
-    <%= f.label :Description %><br/>
-    <%= f.text_area :Description %>
-</p>
-<p>
-    <%= f.submit %>
-</p>
-<% end %>
+             <div class="form-group row">
+              <%= f.label :title, class:"col-2 col-form-label text-light"%>
+              <div class="col-10">
+                 <%= f.text_field :title, class:"form-control shadow rounded", placeholder:"title of article"%>
+              </div>
+             </div>
+            <div class="form-group row">
+               <%= f.label :Description, class:"col-2 col-form-label text-light"%>
+              <div class="col-10">
+                <%= f.text_area :Description, rows: 10, class:"form-control shadow rounded", placeholder:"description of article"%>
+             </div>
+            </div>
+              <div class="form-group row justify-content-center">
+                <%= f.submit class:"btn btn-outline-light btn-lg" %>
+              </div>
+            <% end %>
+        </div>
+     <%= link_to '[cancel and return to articles listing]', articles_path, class:"text-info"%>
+    </div>
