--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,30 @@
-<h1>articles listing pages</h1>
-<table>
-    <thead>
-        <tr>
-            <th>title</th>
-            <th>Description</th>
-            <th colspan='3'>Action</th>
-        </tr>
-    </thead>
-    
-    <tbody>
-        <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.Description %></td>
-            <td><%= link_to 'show', article_path(article) %></td>
-            <td><%= link_to 'edit', edit_article_path(article) %></td>
-            <td><%= link_to 'delete', article_path(article), method: :delete, data: { confirm: 'are you sure?'} %></td>
-        </tr>
-        <% end %>
-    </tbody>
-</table>
-<p>
+<div id="page-content">
+  <h1 class="text-center mt-4">Listing all Articles</h1>
+
+    <% @articles.each do |article| %>
+       <div class="row justify-content-md-center">
+         <div class="col-8 mt-4">
+             <div class="card text-center shadow p mb-5 bg-white rounded">
+                 <div class="card-header">
+                   By Ganesh Chachriya 
+                 </div>
+                   <div class="card-body">
+                     <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success" %></h5>
+                     <p class="card-text"><%= truncate(article.Description, length: 100) %></p>
+                     <a class="btn btn-success"><%=link_to"view",article_path(article),class:"btn btn-success"%></a>
+                     <a class="btn btn-info"><%=link_to"Edit",edit_article_path(article),class:"btn btn-info"%></a>
+                     <a class="btn btn-danger"><%=link_to"Delete",article_path(article),class:"btn btn-danger",method: :delete, data: {confirm: "Are you sure?"}%></a>
+                   </div>
+                      <div class="card-footer text-muted">
+                        <small>created <%= time_ago_in_words(article.created_at) %> ago;
+                        edited <%= time_ago_in_words(article.updated_at) %> ago
+                        </small>
+                      </div>
+                </div>
+          </div>
+       </div>
+    <% end%>
+  </dev>
     <%= link_to 'create new article', new_article_path %>
-</p><%= link_to 'home page', root_path %>
+    </p><%= link_to 'home page', root_path %>
+</div>
