--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -20,8 +20,10 @@
         <div class="form-group row justify-content-center">
           <%= f.submit class: "btn btn-outline-light btn-lg" %>
         </div>
-      <% end %>
+       <% end %>
+      </div>
+      <div class="mb-3">
+       <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+      </div>
     </div>
-    <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
-  </div>
-</div> 
+ </div> 
