--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,6 +27,6 @@
     </div>
   <% end %>
 </div>
-<div class="flicker_pagination mb-4">
-    <%= will_paginate @articles, :container => false %>
+<div class="flickr_pagination mb-4">
+    <%= will_paginate @users, :container => false %>
   </div>
