--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -11,8 +11,10 @@
                      <h5 class="card-title"><%= link_to article.title, article_path(article), class:"text-success" %></h5>
                      <p class="card-text"><%= truncate(article.Description, length: 100) %></p>
                      <a class="btn btn-success"><%=link_to"view",article_path(article),class:"btn btn-success"%></a>
+                     <% if logged_in? && article.user == current_user %>
                      <a class="btn btn-info"><%=link_to"Edit",edit_article_path(article),class:"btn btn-info"%></a>
                      <a class="btn btn-danger"><%=link_to"Delete",article_path(article),class:"btn btn-danger",method: :delete, data: {confirm: "Are you sure?"}%></a>
+                     <% end %>
                    </div>
                       <div class="card-footer text-muted">
                         <small>created <%= time_ago_in_words(article.created_at) %> ago;
