--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,6 +23,13 @@
      #home-container{
       margin-top: 25px;
          }
+   .jumbotron {
+      background-image: asset-url('jumbo-copy.jpg');
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 425px;
+      }
       html,
       body {
          height: 100%;
@@ -31,7 +38,6 @@
         flex: 1 0 auto;
         background-color: lightgrey;
           }
-
 /* Other Classes for Page Styling */
 
     
