--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,20 @@
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
             <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
             <% end %>
+            <div class="card my-1"> # place this card blow the post body.
+            <div class="card-body">
+                <p class="font-weight-bold">Comments</p>
+                <%= form_with(model: [@article, @article.comments.build]) do |f| %>
+                    <div class="form-group">
+                    <%= f.label 'New comment' %>
+                    <%= f.text_area :body, class: 'form-control' %>
+                    </div>
+                    <%= f.submit 'Submit', class: 'btn btn-primary' %>
+                    <% end %>
+                    </div>
+                    </div>
           </div>
+          <%= render @article.comments %>
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(@article.created_at) %> ago, 
             edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
