--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -9,29 +9,33 @@
           </div>
           <div class="card-body">
             <div class="card-text text-left"><%= simple_format(@article.Description) %></div>
-            <% if logged_in? && @article.user == current_user || current_user.admin? %>
+            <%= link_to "view", articles_path, class:"btn btn-outline-success"%>
+            <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
             <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
             <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger", method: :delete, data: {confirm: "Are you sure?"} %>
             <% end %>
-            <div class="card my-1"> # place this card blow the post body.
-            <div class="card-body">
-                <p class="font-weight-bold">Comments</p>
-                <%= form_with(model: [@article, @article.comments.build]) do |f| %>
-                    <div class="form-group">
-                    <%= f.label 'New comment' %>
-                    <%= f.text_area :body, class: 'form-control' %>
-                    </div>
-                    <%= f.submit 'Submit', class: 'btn btn-primary' %>
-                    <% end %>
-                    </div>
-                    </div>
-          </div>
-          <%= render @article.comments %>
+           </div>
+
           <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(@article.created_at) %> ago, 
             edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
           </div>
         </div>
+         <div class="card my-1">
+                 <div class="card-body">
+                 <p class="font-weight-bold">Comments</p>
+                 <%= form_with(model: [@article, @article.comments.build]) do |f| %>
+                <div class="form-group">
+                <%= f.label 'New comment' %>
+                <%= f.text_area :body, class: 'form-control' %>
+               </div>
+                <%= f.submit 'Submit', class: 'btn btn-primary' %>
+                <% end %>
+               </div>
+              </div>
+              <%= render @article.comments %>
       </div>
     </div>
-  </div>
+   
+          
+</div>
