--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,14 @@
-<div class="card">
-  <div class="card-body">
-    <%= comment.body %>
-  </div>
-</div>
+<% unless comment.parent_id || !comment.persisted? %>
+      <div class="card">
+         <div class="card-body">
+          <%= comment.body %>
+          <%= link_to 'reply', new_article_comment_path(@article, parent_id: comment.id), remote: true, class: 'd-block' %>
+         </div>
+      </div>
+           <% if comment.replies.any? %>
+              <% comment.replies.each do |reply| %> 
+              <%= render partial: 'comments/reply', locals: { reply: reply } %>
+           <% end %>
+     <% end %>
+              <div id="reply-form-<%= comment.id %>"></div>
+     <% end %>
